--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node src/index",
     "dev": "nodemon src/index.js"
   },
   "keywords": [],
@@ -14,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.0",
     "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
