--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGOBD_URL="mongodb+srv://techlike:techlike12345@cluster0.wkwol.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_BD_URL="mongodb+srv://techlike:<techlike12345>@cluster0.5pvbv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
