--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_BD_URL="mongodb+srv://techlike:techlike12345@cluster0.5pvbv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-BASE_URL = "https://techlikebackend.onrender.com"
+BASE_URL_BACKEND = "https://techlikebackend.onrender.com"
+BASE_URL_FRONTEND = "https://techlikefrontend.onrender.com"
